plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral {
        metadataSources {
            mavenPom()
            artifact()
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
            exclude 'resources/**'
        }
        resources {
            srcDirs = ['src/resources']
        }
    }
}

dependencies {
    implementation 'commons-io:commons-io:2.15.0'
    implementation 'commons-logging:commons-logging:1.2'
    implementation 'commons-net:commons-net:3.10.0'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.apache.httpcomponents:httpcore:4.4.16'
    implementation 'com.formdev:flatlaf:3.1.1'
    implementation 'com.github.lookfirst:sardine:5.12'
    implementation 'commons-codec:commons-codec:1.16.0'
}

application {
    mainClass = 'fr.soe.a3s.main.ArmA3Sync'
}

tasks.withType(JavaCompile) {
    options.release = 21
}

tasks.register('copyLibs', Copy) {
    from configurations.runtimeClasspath
    into "$projectDir/resources/lib"
}

jar {
    dependsOn copyLibs
    manifest {
        from('MANIFEST_A3S.MF')
    }
    archiveFileName = 'Arma3Sync.jar'
    destinationDirectory = file("$projectDir")
}

clean {
    delete 'Arma3Sync.jar'
    delete fileTree('resources/lib') { include '*.jar' }
}

